# grove

./: AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  build.rs  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.mulch/: mulch.config.yaml
.mulch/expertise/: architecture.jsonl  cli.jsonl  grove.jsonl  rust.jsonl
.overstory/: agent-manifest.json  config.yaml  groups.json  hooks.json
.overstory/agent-defs/: verifier.md
.seeds/: config.yaml  issues.jsonl
agents/: lead.md  supervisor.md
docs/: architecture.md  bugs-and-gaps.md  feature-group-close.md  gap-analysis.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4-bugfix.md  phase-4.md  phase-5-bugfix.md  phase-5.md  phase-6.5.md  phase-6.6.md  phase-6.md  phase-7.md  phase-8.5.md  phase-8.md  phase-9.md  phase-9c-final.md  phase-9d-final.md  phase-9e-final.md  retro-status.md  retro.md  testing-plan.md
reference/: clean.ts  color.ts  config.test.ts  config.ts  coordinator.ts  costs.ts  doctor.ts  ecosystem.ts  errors-command.ts  errors.ts  feed.ts  format.ts  group.ts  hooks.ts  index.ts  init.ts  json.ts  logs.ts  mail-command.ts  merge-queue.ts  merge-resolver.ts  metrics.ts  nudge.ts  prime.ts  replay.ts  run.ts  sessions-store.ts  sling.ts  spec.ts  status.ts  theme.ts  tmux.ts  trace.ts  types.ts  update.ts  upgrade.ts  watch.ts  worktree-manager.ts  worktree-process.ts  worktree.ts
skills/grove-develop/: SKILL.md
src/: config.rs  errors.rs  json.rs  main.rs  types.rs
src/agents/: mod.rs  (+2 more)
templates/: overlay.md.tmpl
tests/: smoke_real_db.rs
(+86 files in other folders)
