[package]
name = "grove"
version = "0.1.0"
edition = "2021"
description = "Multi-agent orchestration for AI coding agents"
license = "MIT"
repository = "https://github.com/tehreet/grove"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
colored = "2"
which = "7"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
similar = "2"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
